Fixed logo font and menu transparent background on mobile view

--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -36,7 +36,7 @@ nav {
     }
 }*/
 
-.burger {
+/*.burger {
     display: none;
     font-size: 1.5em;
     text-decoration: none;
@@ -50,7 +50,7 @@ nav {
 
 .burger:hover {
     color: $primaryColor;
-}
+}*/
 
 .nav-list {
     width: 50%;
@@ -100,9 +100,9 @@ nav {
         width: 100%;
     }
 
-    .burger {
+    /*.burger {
         display: flex;
-    }
+    }*/
 
     .nav-list {
         display: none;
